project responsive finish

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <title>PRUVATAG</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="/logo/logo2.png" />
+    <title>Pruvatag</title>
     <script src="https://cdn.lordicon.com/lordicon.js"></script>
   </head>
   <body>
